[feature] compelete mvp for auto trading

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "python-dotenv",
     "pyupbit",
-    "openai"
+    "openai",
+    "ta",
+    "pandas",
 ]
